unpackaged/main/default/objects/litify_pm__Statute_Of_Limitation__c/litify_pm__Statute_Of_Limitation__c.object-meta.xml
<CustomObject>
    <label>Statute of Limitation</label>
    <nameField>
        <label>Statute Of Limitations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statute of Limitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>