unpackaged/main/default/objects/litify_pm__Statute_Of_Limitation__c/fields/litify_pm__Case_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Case_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case Type</label>
    <referenceTo>litify_pm__Case_Type__c</referenceTo>
    <relationshipLabel>Statute Of Limitations</relationshipLabel>
    <relationshipName>Statute_Of_Limitations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>