unpackaged/main/default/objects/litify_pm__Statute_Of_Limitation__c/fields/litify_pm__State__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__State__c</fullName>
    <label>State</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AK Alaska</fullName>
            </value>
            <value>
                <fullName>AL Alabama</fullName>
            </value>
            <value>
                <fullName>AR Arkansas</fullName>
            </value>
            <value>
                <fullName>AZ Arizona</fullName>
            </value>
            <value>
                <fullName>CA California</fullName>
            </value>
            <value>
                <fullName>CO Colorado</fullName>
            </value>
            <value>
                <fullName>CT Connecticut</fullName>
            </value>
            <value>
                <fullName>DC District of Columbia</fullName>
            </value>
            <value>
                <fullName>DE Delaware</fullName>
            </value>
            <value>
                <fullName>FL Florida</fullName>
            </value>
            <value>
                <fullName>GA Georgia</fullName>
            </value>
            <value>
                <fullName>HI Hawaii</fullName>
            </value>
            <value>
                <fullName>IA Iowa</fullName>
            </value>
            <value>
                <fullName>ID Idaho</fullName>
            </value>
            <value>
                <fullName>IL Illinois</fullName>
            </value>
            <value>
                <fullName>IN Indiana</fullName>
            </value>
            <value>
                <fullName>KS Kansas</fullName>
            </value>
            <value>
                <fullName>KY Kentucky</fullName>
            </value>
            <value>
                <fullName>LA Louisiana</fullName>
            </value>
            <value>
                <fullName>MA Massachusetts</fullName>
            </value>
            <value>
                <fullName>MD Maryland</fullName>
            </value>
            <value>
                <fullName>ME Maine</fullName>
            </value>
            <value>
                <fullName>MI Michigan</fullName>
            </value>
            <value>
                <fullName>MN Minnesota</fullName>
            </value>
            <value>
                <fullName>MO Missouri</fullName>
            </value>
            <value>
                <fullName>MS Mississippi</fullName>
            </value>
            <value>
                <fullName>MT Montana</fullName>
            </value>
            <value>
                <fullName>NC North Carolina</fullName>
            </value>
            <value>
                <fullName>ND North Dakota</fullName>
            </value>
            <value>
                <fullName>NE Nebraska</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>