unpackaged/main/default/objects/litify_pm__Statute_Of_Limitation__c/fields/litify_pm__Value__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>