unpackaged/main/default/objects/litify_pm__Statute_Of_Limitation__c/listViews/litify_pm__All.listView-meta.xml
<ListView>
    <fullName>litify_pm__All</fullName>
    <columns>NAME</columns>
    <columns>litify_pm__State__c</columns>
    <columns>litify_pm__Case_Type__c</columns>
    <columns>litify_pm__Matter_Date_Field__c</columns>
    <columns>litify_pm__Value__c</columns>
    <columns>litify_pm__Operator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>